[tool.poetry]
name = "fast_api_test"
version = "0.1.0"
description = ""
authors = ["madein713 <nogaevskii@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.74.0"
SQLAlchemy = "^1.4.31"
python-multipart = "^0.0.5"
uvicorn = "^0.17.5"
asyncpg = "^0.25.0"
aiofiles = "^0.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
